--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100px;
   flex: 0;
-
+  padding-bottom: 10px;
 }
 
 .task-name {
@@ -28,6 +28,20 @@
   font-weight: lighter;
   padding: 0px 24px 12px 24px;
   margin: 0 12px;
+  word-break: break-all;
+  overflow-y: auto;
+}
+
+.task-description::-webkit-scrollbar {
+  width: 8px;
+}
+
+.task-description::-webkit-scrollbar-track {
+  background-color: rgb(37, 37, 37);
+}
+
+.task-description::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 100px rgb(104, 104, 104);
 }
 
 .check-circle {
